--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body style="overflow: hidden">
-    <webview id="gpm-player" src="https://play.google.com/music/" style="height:100%;width:100%;position:absolute;"></webview>
+    <webview id="gpm-player" src="https://play.google.com/music/" style="height:100%;width:100%;position:absolute;" preload="inject.js"></webview>
     <script src="./content.js"></script>
   </body>
 </html>
